js/js.translator/testData/incremental/invalidation/inlineFunSameLibRemoveFunctions/lib1/l2.1.kt
fun compute(): Int = plusOne(42)
